ciss240/q/q0104/answers/main.py.err
  File "<stdin>", line 2
    print consolegrid(numrows=7)
                    ^
SyntaxError: invalid syntax
